<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ec_single_axis_bringup</name>
  <version>0.0.0</version>
  <description>Launch package for a single axis using ethercat_driver_ros2</description>
  <maintainer email="macbednarczyk@gmail.com">Maciej Bednarczyk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>ethercat_driver</exec_depend>
  <exec_depend>ethercat_interface</exec_depend>
  <exec_depend>ethercat_plugins</exec_depend>
  <exec_depend>ec_single_axis_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>